--- a/src/setMonthyBudget/setMonthyBudget.component.html
+++ b/src/setMonthyBudget/setMonthyBudget.component.html
@@ -6,5 +6,5 @@
     <mat-label>Amount</mat-label>
     <input matInput  type = "number" placeholder="Rs:0000" formControlName="amount">
   </mat-form-field>
-  <button style="background-color: hotpink;text-align: center;"  type="submit" [disabled]="!budgetForm.valid" mat-button>Set Budget</button>
+  <button style="background-color: hotpink;text-align: center ;margin-left: 38px;"  type="submit" [disabled]="!budgetForm.valid" mat-button>Set Budget</button>
 </form>
