--- a/src/viewStatement/viewStatement.component.css
+++ b/src/viewStatement/viewStatement.component.css
@@ -1,7 +1,7 @@
 table {
     width: 100%;
-    background-image: url('https://images.designtrends.com/wp-content/uploads/2015/11/30163055/Plain-Black-Wood-Background1.jpg');
-
+    /* background-image: url('https://images.designtrends.com/wp-content/uploads/2015/11/30163055/Plain-Black-Wood-Background1.jpg'); */
+background-color:rgb(43, 41, 41);
 }
 
 .filterPlace{
