--- a/src/viewStatement/viewStatement.component.html
+++ b/src/viewStatement/viewStatement.component.html
@@ -1,9 +1,9 @@
 <div class="mat-elevation-z8">
-  <mat-form-field class = "filterPlace">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <mat-form-field class = "filterPlace"  color = "accent">
+    <input  matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" matSort>
+  <button mat-button (click)= "downloadPDF(content)">Download</button>
+  <table mat-table [dataSource]="dataSource" matSort id="content" #content>
 
     <!-- Position Column -->
     <ng-container matColumnDef="no">
@@ -46,9 +46,15 @@
     </ng-template>
   </p>
   </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef > Remove </th>
+    <td mat-cell *matCellDef="let element"> <i style="color: rgb(176,37,37);" (click)= "delete(element.id)" class="fa fa-times" aria-hidden="true"></i></td>
+  </ng-container>
+    <tr mat-header-row *matHeaderRowDef="this.displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: this.displayedColumns;"></tr>
   </table>
-  <mat-paginator [length]="statementList.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 25]">
+  <mat-paginator [length]="this.statementList.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 25]">
   </mat-paginator>
+  
 </div>
