--- a/src/homeScreen/homeScreen.component.css
+++ b/src/homeScreen/homeScreen.component.css
@@ -10,7 +10,8 @@
 
 .header{
     height: 100px;
-   background-image: url("https://cdn.hipwallpaper.com/i/1/10/yX0SVW.jpg");
+   /* background-image: url("https://cdn.hipwallpaper.com/i/1/10/yX0SVW.jpg"); */
+   background-color: rgb(40,56,81);
 }
 .loginBtn{
     position: absolute; 
@@ -39,7 +40,8 @@ background-color: rgb(242,130,32);
     height: 87%;
     font-size: 20px;
     text-align: center;
-      background-image: url("https://cdn.hipwallpaper.com/i/1/10/yX0SVW.jpg");
+      /* background-image: url("https://cdn.hipwallpaper.com/i/1/10/yX0SVW.jpg"); */
+      background-color: rgb(40,56,81);
 }
 .signUpFont{
     font-size: 78px;
@@ -54,6 +56,7 @@ left: 22%;
     width: 68%;
     height: 55px;
     margin-left: 55px;
+    text-align: center;
 }
 
 .signUpFreeBtn{
